--- a/awesomeapp/app/views/partials/_footer.html.erb
+++ b/awesomeapp/app/views/partials/_footer.html.erb
@@ -1,1 +1,9 @@
-© Todos os direitos reservados - <%= Date.new.strftime("%Y") %>
+<footer class="pt-10 sm:mt-10 pt-10">
+<svg class=" "   xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+<path fill="#005A8B" fill-opacity="1" d="M0,96L34.3,106.7C68.6,117,137,139,206,128C274.3,117,343,75,411,90.7C480,107,549,181,617,202.7C685.7,224,754,192,823,170.7C891.4,149,960,139,1029,138.7C1097.1,139,1166,149,1234,133.3C1302.9,117,1371,75,1406,53.3L1440,32L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>
+<div class="absolute md:-bottom-2 ">
+<div class="container mx-auto px-5 md:px-24 text-center h-auto text-white">
+© Todos os direitos reservados - <%= Time.now.strftime("%Y") %> <%= link_to "Awesome App", "https://github.com/marviorocha/desafios-desevolvimento", target: '_blank', class: "no-underline hover:underline" %> by Marvio Rocha 
+</div>
+</div>
+</footer>
