--- a/awesomeapp/app/views/partials/_head.html.erb
+++ b/awesomeapp/app/views/partials/_head.html.erb
@@ -1,18 +1,31 @@
-<div class="container mx-auto px-32 my-4">
-
-<div class="flex  flex-row justify-between h-32 bg-gray-400">
-    <div class="">
-    <a  title="AwesomeApp" href="<%= root_path %>">
-    <%= image_tag('logo.png', size: "225x225", alt: "Logo AwesomeApp" ) %>
-    </a>
+<div class="bg-blue-dark text-white h-16">
+    <div class="container mx-auto px-5 md:px-24 pt-4 text-right text-white ">
+        <div class="space-x-3">
+            <a href="">Github logo</a>
+            <a href="">Github logo</a>
+            <a href="">Github logo</a>
+        </div>
     </div>
+</div>
+<header>
+    <div class="container mx-auto px-5 md:px-24 my-4">
 
-    <div class="space-x-4 mt-6  ">
-    <a href="">Github logo</a>
-    <a href="">Github logo</a>
-    <a href="">Github logo</a>
+        <div class="flex flex-row flex-wrap justify-between items-center relative">
+            <div class="">
+                <a class="block" title="AwesomeApp" href="<%= root_path %>">
+                    <%= image_tag('logo.png', alt: "Logo AwesomeApp", class: 'w-full md:w-60' ) %>
+                </a>
+            </div>
+          
+            <nav class="flex flex-col md:flex-row md:space-x-6 mt-2 rounded-lg text-gray-500 font-semibold w-full md:w-auto bg-gray-100 md:bg-transparent p-6 md:p-0">
+                    <%= link_to "Link One", root_path, class: "no-underline hover:underline" %>
+                    <%= link_to "Link Two", root_path, class: "no-underline hover:underline" %>
+                    <%= link_to "Link Tree", root_path, class: "no-underline hover:underline" %>
+                    <%= link_to "Link Fowor", root_path, class: "no-underline hover:underline" %>
+            </nav>
+            
+
+        </div>
+
     </div>
-
-</div>
-
-</div>
+</header>
