--- a/awesomeapp/app/views/layouts/application.html.erb
+++ b/awesomeapp/app/views/layouts/application.html.erb
@@ -8,16 +8,16 @@
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_pack_tag 'application' %>
-  
+    <%= javascript_pack_tag 'hello_svelte' %>
 
   </head>
 
   <body>
     <%= render "partials/head" %>
 
-<div class="container text-lg mx-auto px-5 md:px-24 block pt-4 ">
-    <%= yield %>
-</div>
+    <div class="container text-lg mx-auto px-5 md:px-24 block pt-4 ">
+         <%= yield %>
+    </div>
 
     <%= render "partials/footer" %>
   </body>
