--- a/awesomeapp/app/views/partials/_head.html.erb
+++ b/awesomeapp/app/views/partials/_head.html.erb
@@ -22,10 +22,10 @@
                     <%= link_to root_path do %>
                     <i class="fas fa-home"></i> Home
                     <% end %>
-                    <%= link_to root_path do %>
+                    <%= link_to projects_path do %>
                     <i class="fas fa-folder-open"></i> Projetos
                     <% end %>
-                    <%= link_to root_path do %>
+                    <%= link_to activities_path do %>
                     <i class="fas fa-calendar-alt"></i> Atividades
                     <% end %>
      
