Last stage and finishing challenge

--- a/awesomeapp/app/views/layouts/application.html.erb
+++ b/awesomeapp/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
     <%= render "partials/head" %>
 
     <div class="container text-lg mx-auto px-5 md:px-24 block pt-4 ">
+    <%= render "partials/menssages" %>
          <%= yield %>
     </div>
 
