--- a/awesomeapp/app/javascript/stylesheets/application.scss
+++ b/awesomeapp/app/javascript/stylesheets/application.scss
@@ -1,3 +1,23 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+@layer base {
+   
+    h1 {
+        @apply text-2xl;
+    }
+
+    h2 {
+        @apply text-xl;
+    }
+}
+
+@layer components {
+    .link {
+        @apply no-underline hover:underline;
+    }
+    .btn-blue {
+        @apply bg-blue-500 transition duration-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-md cursor-pointer;
+    }
+}
