--- a/awesomeapp/app/views/home/index.html.erb
+++ b/awesomeapp/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 
-<%= content_for :title do "Welcome Dashboard" end %>
+<%= content_for :title do "Bem-vindo!" end %>
 
-<h1 class="font-normal my-5 text-blue-dark text-4xl"> Bem-vindo Awesome App </h1>
+<h1 class="font-normal my-5 text-blue-dark text-4xl"> Awesome App</h1>
 <hr class="py-2">
 <div class="text-basic">
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam impedit non perferendis repudiandae est. Qui sunt quo sed voluptatem quod facere, ducimus nostrum quos praesentium dolorem inventore mollitia, voluptatum ipsam?
