--- a/awesomeapp/app/views/partials/_head.html.erb
+++ b/awesomeapp/app/views/partials/_head.html.erb
@@ -12,21 +12,22 @@
     <div class="container mx-auto px-5 md:px-24 my-4">
 
         <div class="flex flex-row flex-wrap justify-between items-center relative">
-            <div class="">
+           
                 <a class="block" title="AwesomeApp" href="<%= root_path %>">
                     <%= image_tag('logo.png', alt: "Logo AwesomeApp", class: 'w-full md:w-60' ) %>
                 </a>
-            </div>
+           
           
             <nav class="flex flex-col md:flex-row md:space-x-6 mt-2 rounded-lg text-gray-500 font-semibold w-full md:w-auto bg-gray-100 md:bg-transparent p-6 md:p-0">
+                    
                     <%= link_to root_path do %>
-                    <i class="fas fa-home"></i> Home
+                    <i class="fas fa-home"></i> <span class="link">Home</span>
                     <% end %>
                     <%= link_to projects_path do %>
-                    <i class="fas fa-folder-open"></i> Projetos
+                    <i class="fas fa-folder-open"></i> <span class="link">Projetos</span>
                     <% end %>
                     <%= link_to activities_path do %>
-                    <i class="fas fa-calendar-alt"></i> Atividades
+                    <i class="fas fa-calendar-alt"></i> <span class="link">Atividades</span>
                     <% end %>
      
             </nav>
