Update delay to date

--- a/awesomeapp/app/views/home/index.html.erb
+++ b/awesomeapp/app/views/home/index.html.erb
@@ -1,19 +1,21 @@
-
 <%= content_for :title do "Bem-vindo!" end %>
 
-<h1 class="font-normal my-5 text-blue-dark text-4xl"> Awesome App</h1>
-<hr class="py-2">
-<div class="text-basic">
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam impedit non perferendis repudiandae est. Qui sunt quo sed voluptatem quod facere, ducimus nostrum quos praesentium dolorem inventore mollitia, voluptatum ipsam?
-</div>
- 
-<div class="text-basic">
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam impedit non perferendis repudiandae est. Qui sunt quo sed voluptatem quod facere, ducimus nostrum quos praesentium dolorem inventore mollitia, voluptatum ipsam?
-</div>
-<p></p>
-<div class="text-basic">
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam impedit non perferendis repudiandae est. Qui sunt quo sed voluptatem quod facere, ducimus nostrum quos praesentium dolorem inventore mollitia, voluptatum ipsam?
-</div>
-
- 
-         
+	<h1 class="font-normal my-5 text-blue-dark text-4xl"> Awesome App</h1>
+	<hr class="py-2">
+	<div class="text-basic">
+		Olá, meu nome é Marvio Rocha, gostaria de compartilhar meus conhecimentos através desse desafio para o Grupo
+		Euax. Primeiramente quero agradecer pela oportunidade de está realizando este desafio com vocês. Sem dúvida
+		desafios sempre nos motivam e ajuda a entender a nossa jornada profissional. Espero que vocês gostem.
+	</div>
+	<p></p>
+	<div class="text-basic my-5">
+		O Projeto Awesome App é voltado para avaliação do desenvolvedor. Esse projeto foi feito com muito carinho e é
+		apenas a primeira versão desse desafio.
+	</div>
+	<p></p>
+	<div class="text-basic">
+		<%= link_to 'https://github.com/marviorocha/desafios-desevolvimento' , target: '_blank' ,
+			class: 'text-blue-600 link' do %>
+			<i class="fa fa-github"></i> Github do Projeto
+		<% end %>
+	</div>
